--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "jyve-pendulum"
-version = "2.0.5.1"
+version = "2.0.5.2a1"
 description = "Python datetimes made easy"
 authors = ["Sébastien Eustace <sebastien@eustace.io>"]
 license = "MIT"
@@ -39,5 +39,5 @@ freezegun = "^0.3.12"
 
 
 [build-system]
-requires = ["poetry>=1.0.0b1"]
+requires = ["poetry>=1.0.3"]
 build-backend = "poetry.masonry.api"
